@@ -1,3 +1,12 @@
+Development Portal (2017-11-21 shi)
+==============================
+Display comments for baseline in SAVi
+Add collapse buttons for each result chunk
+Add counter increments for result and indicator
+Fixed Print-friendly css for transaction tables
+Updated Print-friendly css
+
+
 Development Portal (2017-11-18 shi)
 ==============================
 Updated indicator subtitle in SAVi
